# automated_speech_recognition_on_AIPC

./: .gitignore  Readme.md  app_gen.py  prompt.txt  pyproject.toml  realtime_asr.py  requirements.txt  run.bat  setup.bat
docs/: README.md  architecture.md  requirements.md
