[project]
name = "automated-speech-recognition-on-aipc"
version = "0.1.0"
description = "Windows realtime speech recognition app built on OpenVINO and openvino-genai."
readme = "Readme.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1,<3",
    "openvino==2026.2",
    "openvino-tokenizers==2026.2",
    "openvino-genai==2026.2",
    "optimum-intel[openvino]>=1.23,<2",
    "huggingface-hub>=0.34,<1",
    "PyQt6>=6.7,<6.9",
    "sounddevice>=0.5,<1",
    "webrtcvad-wheels>=2.0.14",
    "setuptools<81",
]

[tool.uv]
package = false
